--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <div class="resume-section-content">
                     <h1 class="mb-0">
                         Srinivasa Raju
-                        <span class="text-primary">J</span>
+                        <span class="text-primary"></span>
 						Addepalli
                     </h1>
                   <div class="subheading mb-5">
