--- a/index.html
+++ b/index.html
@@ -48,12 +48,12 @@
                   <div class="subheading mb-5">
                         Solutions Architect, Multi-Cloud Certified Professional 
                     </div>
-                    <p class="lead mb-5">I work as a Solutions Architect and helping customers with Cloud Migration security Advisory Services. <a target ="_blank" href=""></a> </p>
+                    <p class="lead mb-5">I work as a Solutions Architect and helping customers with Cloud Migration Security Advisory Services. <a target ="_blank" href=""></a> </p>
 					
                     <div class="social-icons">
                         <a target ="_blank" class="social-icon" href="https://in.linkedin.com/in/sraddepalli"><i class="fab fa-linkedin-in"></i></a>
                         <a target ="_blank" class="social-icon" href="https://github.com/sraddepalli"><i class="fab fa-github"></i></a>
-                        <a target = "_blank" class="social-icon" href="https://twitter.com/srinivasa_rajua"><i class="fab fa-twitter"></i></a>
+                        <a target = "_blank" class="social-icon" href="https://twitter.com/sraddepalli"><i class="fab fa-twitter"></i></a>
                         </a>
                     </div>
               </div>
