--- a/index.html
+++ b/index.html
@@ -92,57 +92,10 @@
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary"> Aug 2017 - Present</span></div>
                     </div>
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0"></h3>
-                            <div class="subheading mb-3"> </div>
-                            <p> <a href="https://www.1inclusion.com/" target = "_blank"></a> </p>
-                        </div>
-                        <div class="flex-shrink-0"><span class="text-primary"></span></div>
-                    </div>
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0"></h3>
-                            <div class="subheading mb-3"></div>
-                            <p> </p>
-                        </div>
-                        <div class="flex-shrink-0"><span class="text-primary"> </span></div>
-                    </div>
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0"></h3>
-                            <div class="subheading mb-3"></div>
-                            <p></p>
-                        </div>
-                        <div class="flex-shrink-0"><span class="text-primary"> </span></div>
-                    </div>
-					<div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0"> </h3>
-                            <div class="subheading mb-3"> </div>
-                            <p></p>
-                      </div>
-                        <div class="flex-shrink-0"><span class="text-primary"></span></div>
-                    </div>
-					<div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0"></h3>
-                            <div class="subheading mb-3"></div>
-                            <p></p>
-                      </div>
-                        <div class="flex-shrink-0"><span class="text-primary"></span></div>
-                    </div>
-					<div class="d-flex flex-column flex-md-row justify-content-between list-inline-item mb-5">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0"></h3>
-                            <div class="subheading mb-3"></div>
-                            <p></p>
-                      </div>
-                        <div class="flex-shrink-0"><span class="text-primary"></span></div>
-                    </div>
+                   
 					<div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
-							<p>To understand more about my career roles and experience, please check my <a href="https://in.linkedin.com/sraddepalli" target ="_blank">LinkedIn profile</a>.</p>
+	<p>To understand more about my career roles and experience, please check my <a href="https://linkedin.com/in/sraddepalli" target ="_blank">LinkedIn profile</a>.</p>
                       </div>
                     </div>
                 </div>
@@ -294,11 +247,12 @@
                     <h2 class="mb-5">Contact Me </h2>
                     <p class = "lead"> You can contact me in LinkedIn and our CloudnLoud Tech Community from below links. </p>
                     <div class="social-icons">
-                        <a target ="_blank" class="social-icon" href="https://in.linkedin.com/in/sraddepalli"><i class="fab fa-linkedin-in"></i></a>                        
-			<a target ="_blank" class="social-icon" href="https://fb.com/cloudnloudtech"> <i class="fab fa-facebook-f" </a>
-			<a target ="_blank" class="social-icon" href="https://twitter.com/cloudnloud"> <i class="fab fa-twitter"></a>
-			<a target ="_blank" class="social-icon" href="https://www.youtube.com/c/cloudnloud"><i class="fab fa-youtube-y"></i> </a>
+                        <a target ="_blank" class="social-icon" href="https://wwww.linkedin.com/in/sraddepalli"><i class="fab fa-linkedin-in"></i></a>                        
+			<a target ="_blank" class="social-icon" href="https://www.fb.com/cloudnloudtech"> <i class="fab fa-facebook-f" </a>
 			<a target ="_blank" class="social-icon" href="https://www.linkedin.com/company/80359681/admin/"> <i class="fab fa-linkedin-in"></i></a>
+			<a target ="_blank" class="social-icon" href="https://www.twitter.com/cloudnloud"> <i class="fab fa-twitter"></a>
+			<a target ="_blank" class="social-icon" href="https://www.youtube.com/c/cloudnloud"><i class="fab fa-youtube"></i> </a>
+			
                     </div>
                 </div>
             </section>
