--- a/index.html
+++ b/index.html
@@ -248,9 +248,9 @@
                     <p class = "lead"> You can contact me in LinkedIn and our CloudnLoud Tech Community from below links. </p>
                     <div class="social-icons">
                         <a target ="_blank" class="social-icon" href="https://wwww.linkedin.com/in/sraddepalli"><i class="fab fa-linkedin-in"></i></a>                        
-			<a target ="_blank" class="social-icon" href="https://www.fb.com/cloudnloudtech"> <i class="fab fa-facebook-f" </a>
+			<a target ="_blank" class="social-icon" href="https://www.fb.com/cloudnloudtech"> <i class="fab fa-facebook-f" </i> </a>
 			<a target ="_blank" class="social-icon" href="https://www.linkedin.com/company/80359681/admin/"> <i class="fab fa-linkedin-in"></i></a>
-			<a target ="_blank" class="social-icon" href="https://www.twitter.com/cloudnloud"> <i class="fab fa-twitter"></a>
+			<a target ="_blank" class="social-icon" href="https://www.twitter.com/cloudnloud"> <i class="fab fa-twitter"></i></a>
 			<a target ="_blank" class="social-icon" href="https://www.youtube.com/c/cloudnloud"><i class="fab fa-youtube"></i> </a>
 			
                     </div>
