--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
 			    </a> </p>
 					
                     <div class="social-icons">
-                        <a target ="_blank" class="social-icon" href="https://in.linkedin.com/in/sraddepalli"><i class="fab fa-linkedin-in"></i></a>
-                        <a target ="_blank" class="social-icon" href="https://github.com/sraddepalli"><i class="fab fa-github"></i></a>
-                        <a target = "_blank" class="social-icon" href="https://twitter.com/sraddepalli"><i class="fab fa-twitter"></i></a>
+                        <a target ="_blank" class="social-icon" href="https://www.linkedin.com/in/sraddepalli"><i class="fab fa-linkedin-in"></i></a>
+                        <a target ="_blank" class="social-icon" href="https://www.github.com/sraddepalli"><i class="fab fa-github"></i></a>
+                        <a target = "_blank" class="social-icon" href="https://www.twitter.com/sraddepalli"><i class="fab fa-twitter"></i></a>
                         </a>
                     </div>
               </div>
