--- a/index.html
+++ b/index.html
@@ -84,16 +84,16 @@
 <p> 	𝐓𝐞𝐜𝐡𝐧𝐢𝐜𝐚𝐥 𝐒𝐤𝐢𝐥𝐥𝐬 </p>
 	
 			<p> • Cloud (AWS, Google Cloud, Microsoft Azure and Oracle Cloud), Automation & DevOps   </p>
-			• Citrix – XenApp & XenDesktop, VMWare, HyperV, Windows, Active Directory, SCCM, SCOM
+			• Citrix – XenApp & XenDesktop, VMWare, HyperV, Windows, Active Directory, SCCM, SCOM </p>
 			• Atlassian tools (JIRA, Confluence), ServiceNow and Remedy </p>
-		 • Agile Service Delivery, Stakeholder Management, ITSM, Project Management
+			    • Agile Service Delivery, Stakeholder Management, ITSM, Project Management </p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary"> Aug 2017 - Present</span></div>
                     </div>
                    
 		<div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
-	<p>To understand more about my career roles and experience, please check my <a href="https://linkedin.com/in/sraddepalli" target ="_blank">LinkedIn profile</a>.</p>
+	<p>To understand more about my career roles and experience, please check my <a href="https://linkedin.com/in/sraddepalli" target ="_blank">LinkedIn Profile</a>.</p>
                       </div>
                     </div>
                 </div>
@@ -246,12 +246,12 @@
                     <p class = "lead"> You can reach me and our CloudnLoud Tech Community from below links. </p>
                       <div class="social-icons">
                         <a target ="_blank" class="social-icon" href="https://wwww.linkedin.com/in/sraddepalli"><i class="fab fa-linkedin-in"></i></a>
+			 <a target ="_blank" class="social-icon" href="https://www.youtube.com/c/cloudnloud"><i class="fab fa-youtube"></i></a>
                         <a target ="_blank" class="social-icon" href="https://github.com/cloudnloud"><i class="fab fa-github"></i></a>
 			<a target ="_blank" class="social-icon" href="https://wwww.linkedin.com/company/80359681/admin/"><i class="fab fa-linkedin-in"></i></a>
                         <a target = "_blank" class="social-icon" href="https://twitter.com/cloudnloud"><i class="fab fa-twitter"></i></a>
                         <a target = "_blank" class="social-icon" href="https://www.facebook.com/cloudnloudtech"><i class="fab fa-facebook-f"></i></a>
-			<a target ="_blank" class="social-icon" href="https://www.youtube.com/c/cloudnloud"><i class="fab fa-youtube"></i></a>	
-                          </div>
+			     </div>
                     </div>
 			
           
