--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Sri Venkateswara University</h3>
                             <div class="subheading mb-3">Master of Computer Applications (MCA)</div>
-                            <p>Computer science specialization</p>
+                            <p>Computer Science Specialization</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">2003 - 2006</span></div>
                     </div>
@@ -282,7 +282,7 @@
                     </ul>
                 </div>
             </section>
-			<section class="resume-section" id="contact">
+		<section class="resume-section" id="contact">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Contact Me </h2>
                     <p class = "lead"> You can reach me / our CloudnLoud Tech Community for any queries with the below links. </p>
