--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                         Solutions Architect, Multi-Cloud Certified Professional 
                     </div>
                     <p class="lead mb-5">
-			    Having 14+ years of professional experience in IT Infra with Masters education. I work as a Solutions Architect and helping customers with Cloud Migration Security Advisory Services. <a target ="_blank" href="">
+			    Having 14+ years of professional experience in IT Infra with Masters education. I work as a Technical Architect and helping customers with Cloud Migration Advisory Services. <a target ="_blank" href="">
 			    </a> </p>
 					
                     <div class="social-icons">
@@ -74,7 +74,7 @@
                             <h3 class="mb-0">Solutions Architect</h3>
                             
 				<div class="subheading mb-3">TCS</div>
-                            <p> I am working as Solutions Architect in Financial Services and providing Cloud Migration Security Advisory services to Customers and Applications Teams as part of Cloud Migration.
+                            <p> I am working as Technical Architect in Financial Services and providing Cloud Migration Security Advisory services to Customers and Applications Teams as part of Cloud Migration.
 				</p>
 <p>				
 	𝐏𝐫𝐨𝐟𝐞𝐬𝐬𝐢𝐨𝐧𝐚𝐥 𝐂𝐞𝐫𝐭𝐢𝐟𝐢𝐜𝐚𝐭𝐢𝐨𝐧𝐬: </p>
