--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 			<div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                        
 			    <div class="flex-grow-1">
-                            <h3 class="mb-0">Solutions Architect</h3>
+                            <h3 class="mb-0">Technical Architect</h3>
                             
 				<div class="subheading mb-3">TCS</div>
                             <p> I am working as Technical Architect in Financial Services and providing Cloud Migration Security Advisory services to Customers and Applications Teams as part of Cloud Migration.
