--- a/index.html
+++ b/index.html
@@ -307,5 +307,9 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
         <script src="js/scripts.js"></script>
+				
+	<!-- hitwebcounter Code START -->
+<a href="https://www.hitwebcounter.com" target="_blank">
+<img src="https://hitwebcounter.com/counter/counter.php?page=7979193&style=0002&nbdigits=9&type=page&initCount=0" title="Free Counter" Alt="web counter"   border="0" /></a>     
     </body>
 </html>
