--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
             </section>
 		<section class="resume-section" id="contact">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Contact Me </h2>
+                    <h2 class="mb-5"> Contact Reference </h2>
                     <p class = "lead"> You can reach me / our CloudnLoud Tech Community for any queries with the below links. </p>
                       <div class="social-icons">
                         <a target ="_blank" class="social-icon" href="https://wwww.linkedin.com/in/sraddepalli"><i class="fab fa-linkedin-in"></i></a>
