--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
 	-->
 				
 
-<p align="left"> <img src="https://profile-counter.glitch.me/sraddepalli.github.io/count.svg&label=Views&color=blue&style=plastic" /> </p>				
+<p align="left"> Visitor count<br> <img src="https://profile-counter.glitch.me/sraddepalli.github.io/count.svg" /> </p>				
 				
 </body>
 </html>
