--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
                         <a target ="_blank" class="social-icon" href="https://www.linkedin.com/in/sraddepalli"><i class="fab fa-linkedin-in"></i></a>
                         <a target ="_blank" class="social-icon" href="https://www.github.com/sraddepalli"><i class="fab fa-github"></i></a>
                         <a target = "_blank" class="social-icon" href="https://www.twitter.com/sraddepalli"><i class="fab fa-twitter"></i></a>
+			 <a target = "_blank" class="social-icon" href="https://hashnode.com/@sraddepalli"> <i class="fab fa-hasnode"></i></a>
                         
                     </div>
               </div>
