--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 			Addepalli
                     </h1>
                   <div class="subheading mb-5">
-                        Technical Architect, Multi-Cloud Certified Professional 
+                        Solutions Manager / Architect, Multi-Cloud Certified Professional 
                     </div>
                     <p class="lead mb-5">
 			    Having 14+ years of professional experience in IT Infra with Masters education. I work as a Technical Architect and helping customers with Cloud Migration Advisory Services. <a target ="_blank" href="">
