--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                         Product Architect / Manager - Cloud, Data & ML | #AWS Community BUilder | Multi-Cloud Certified Professional 
                     </div>
                     <p class="lead mb-5">
-			    Having 14+ years of professional experience in IT with Masters education. I am working as a Product Architect / Implementation Manager - Data. Helping customers with Cloud Migration Advisory Services. <a target ="_blank" href="">
+			    Having 14+ years of professional experience in IT with Masters education. I am working as a Product Architect / Implementation Manager - Data. Helping Customers with continuous support and delivery on Data & ML - FinTech. Helped customers with Cloud Migration Security Advisory Services. <a target ="_blank" href="">
 			    </a> </p>
 					
                     <div class="social-icons">
