--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 			Addepalli
                     </h1>
                   <div class="subheading mb-5">
-                        Technology Leader / Manager - Cloud & DevOps | #AWS Community BUilder | Multi-Cloud Certified Professional 
+                        Technology Leader | #AWS Community BUilder | Multi-Cloud Certified Professional 
                     </div>
                     <p class="lead mb-5">
 			    Having 15+ years of professional experience in IT with Masters education. I am working as a Technical Architect / Manager - Cloud & DevOps. Helping Customers with continuous support and delivery on Data & ML - FinTech. Helped customers with Cloud Migration Security Advisory Services. <a target ="_blank" href="">
