--- a/index.html
+++ b/index.html
@@ -78,7 +78,8 @@
                             
 				<div class="subheading mb-3">TCS</div>
 			    
-                            <p> I am working as Product Architect / Implementation Manager - Data & ML in Financial engagements. Helping Customers with continuous support and delivery on Data & ML - FinTech. Helped customers with Cloud Migration Security Advisory Services.
+                            <p> I am working as 
+				   Technical Architect / Manager in FinTech. Helping Customers with continuous support and delivery on Data Migration engagements. Helped customers with Cloud Migration Security Advisory Services.
 				</p>
 <p>				
 	𝐏𝐫𝐨𝐟𝐞𝐬𝐬𝐢𝐨𝐧𝐚𝐥 𝐂𝐞𝐫𝐭𝐢𝐟𝐢𝐜𝐚𝐭𝐢𝐨𝐧𝐬: </p>
