--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
                          <a target ="_blank" class="social-icon" href="https://discord.gg/vbjRQGVhuF"><i class="fab fa-discord"></i></a>
 			  <a target ="_blank" class="social-icon" href="https://www.youtube.com/c/cloudnloud"><i class="fab fa-youtube"></i></a>
                         <a target ="_blank" class="social-icon" href="https://github.com/cloudnloud"><i class="fab fa-github"></i></a>
-			<a target ="_blank" class="social-icon" href="https://wwww.linkedin.com/company/80359681/admin/"><i class="fab fa-linkedin-in"></i></a>
+			<a target ="_blank" class="social-icon" href="https://www.linkedin.com/company/cloudnloud/"><i class="fab fa-linkedin-in"></i></a>
                         <a target = "_blank" class="social-icon" href="https://twitter.com/cloudnloud"><i class="fab fa-twitter"></i></a>
                         <a target = "_blank" class="social-icon" href="https://www.facebook.com/cloudnloudtech"><i class="fab fa-facebook-f"></i></a>
 			  
