--- a/index.html
+++ b/index.html
@@ -78,8 +78,7 @@
                             
 				<div class="subheading mb-3">TCS</div>
 			    
-                            <p> I am working as 
-				   Technical Architect / Manager in FinTech. Helping Customers with continuous support and delivery on Data Migration engagements. Helped customers with Cloud Migration Security Advisory Services.
+                            <p> I am working as Technical Architect / Manager in FinTech. Helping Customers with continuous support and delivery on Data Migration engagements. Helped customers with Cloud Migration Security Advisory Services.
 				</p>
 <p>				
 	𝐏𝐫𝐨𝐟𝐞𝐬𝐬𝐢𝐨𝐧𝐚𝐥 𝐂𝐞𝐫𝐭𝐢𝐟𝐢𝐜𝐚𝐭𝐢𝐨𝐧𝐬: </p>
@@ -90,8 +89,9 @@
 <p> 	𝐓𝐞𝐜𝐡𝐧𝐢𝐜𝐚𝐥 𝐒𝐤𝐢𝐥𝐥𝐬 </p>
 	
 			<p> • Cloud (AWS, Google Cloud, Microsoft Azure and Oracle Cloud), Automation & DevOps   </p>
-			• Citrix – XenApp & XenDesktop, VMWare, HyperV, Windows, Active Directory, SCCM, SCOM </p>
-			• Atlassian tools (JIRA, Confluence), ServiceNow and Remedy </p>
+			    • Citrix – XenApp & XenDesktop, VMWare, HyperV, Windows, Active Directory, SCCM, SCOM </p>
+			    • Terraform. Python, PowerShell </p>
+			    • Atlassian tools (JIRA, Confluence), ServiceNow and Remedy </p>
 			    • Agile Service Delivery, Stakeholder Management, ITSM, Project Management </p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary"> Aug 2017 - Present</span></div>
