--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                         Technology Leader | #AWS Community BUilder | Multi-Cloud Certified Professional 
                     </div>
                     <p class="lead mb-5">
-			    Having 15 years of professional experience in IT with Masters education. I am working as a Technical Architect / Manager - Cloud & DevOps. Helping Customers with continuous support and delivery on Data & ML - FinTech. Helped customers with Cloud Migration Security Advisory Services. <a target ="_blank" href="">
+			    Having 15+ years of professional experience in IT with Masters education. I am working as a Technical Architect / Manager - Cloud & DevOps. Helping Customers with continuous support and delivery on Data & ML - FinTech. Helped customers with Cloud Migration Security Advisory Services. <a target ="_blank" href="">
 			    </a> </p>
 					
                     <div class="social-icons">
@@ -302,7 +302,7 @@
                     <h2 class="mb-5"> Contact Reference </h2>
                     <p class = "lead"> You can reach me / our CloudnLoud Tech Community for any queries with the below links. </p>
                       <div class="social-icons">
-                        <a target ="_blank" class="social-icon" href="https://wwww.linkedin.com/in/sraddepalli"><i class="fab fa-linkedin-in"></i></a>
+                        <a target ="_blank" class="social-icon" href="https://www.linkedin.com/in/sraddepalli/"><i class="fab fa-linkedin-in"></i></a>
 			 <a target ="_blank" class="social-icon" href="https://discord.gg/vbjRQGVhuF"><i class="fab fa-discord"></i></a>
 			  <a target ="_blank" class="social-icon" href="https://www.youtube.com/c/cloudnloud"><i class="fab fa-youtube"></i></a>
                         <a target ="_blank" class="social-icon" href="https://github.com/cloudnloud"><i class="fab fa-github"></i></a>
