--- a/index.html
+++ b/index.html
@@ -231,8 +231,8 @@
 
              	<p class = "lead"> You can follow / reach us for any queries with the below links: </p>
                       <div class="social-icons">
-                         <a target ="_blank" class="social-icon" href="https://discord.gg/vbjRQGVhuF"><i class="fab fa-discord"></i></a>
-			  <a target ="_blank" class="social-icon" href="https://www.youtube.com/c/cloudnloud"><i class="fab fa-youtube"></i></a>
+			<a target ="_blank" class="social-icon" href="https://discord.gg/vbjRQGVhuF"><i class="fab fa-discord"></i></a>
+			<a target ="_blank" class="social-icon" href="https://www.youtube.com/c/cloudnloud"><i class="fab fa-youtube"></i></a>
                         <a target ="_blank" class="social-icon" href="https://github.com/cloudnloud"><i class="fab fa-github"></i></a>
 			<a target ="_blank" class="social-icon" href="https://www.linkedin.com/company/cloudnloud/"> <i class="fab fa-linkedin-in"></i></a>
                         <a target = "_blank" class="social-icon" href="https://twitter.com/cloudnloud"><i class="fab fa-twitter"></i></a>
@@ -302,6 +302,7 @@
                     <h2 class="mb-5"> Contact Reference </h2>
                     <p class = "lead"> You can reach me / our CloudnLoud Tech Community for any queries with the below links. </p>
                       <div class="social-icons">
+			<a target ="_blank" class="social-icon" href="https://linkedin.com/in/sraddepalli"><i class="fab fa-linkedin-in"></i></a>
                         <a target ="_blank" class="social-icon" href="https://discord.gg/vbjRQGVhuF"><i class="fab fa-discord"></i></a>
 			<a target ="_blank" class="social-icon" href="https://www.youtube.com/c/cloudnloud"><i class="fab fa-youtube"></i></a>
                         <a target ="_blank" class="social-icon" href="https://github.com/cloudnloud"><i class="fab fa-github"></i></a>
