--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                         Technology Leader | #AWS Community BUilder | Multi-Cloud Certified Professional 
                     </div>
                     <p class="lead mb-5">
-			    Having 15+ years of professional experience in IT with Masters education. I am working as a Solutions Architect / Manager - Cloud & DevOps. Helping Customers with continuous support and delivery in Enterprise Data upgrade & Cloud Migration Engagements. Helped customers with Cloud Migration Security Advisory Services. <a target ="_blank" href="">
+			    Having 15+ years of professional experience in IT with Masters education. I am working as a Principal Consultant / Program Manager - Cloud Infrastructure. Helping Customers with continuous support and delivery in Enterprise Data upgrade & Cloud Migration Engagements. Helped customers with Cloud Migration Security Advisory Services. <a target ="_blank" href="">
 			    </a> </p>
 					
                     <div class="social-icons">
@@ -89,6 +89,7 @@
 <p> 	𝐓𝐞𝐜𝐡𝐧𝐢𝐜𝐚𝐥 𝐒𝐤𝐢𝐥𝐥𝐬 </p>
 	
 			<p> • Cloud (AWS, Google Cloud, Microsoft Azure and Oracle Cloud), Automation & DevOps   </p>
+			    • Power BI, Tableau </p>
 			    • Citrix – XenApp & XenDesktop, VMWare, HyperV, Windows, Active Directory, SCCM, SCOM </p>
 			    • Terraform. Python, PowerShell </p>
 			    • Atlassian tools (JIRA, Confluence), ServiceNow and Remedy </p>
