--- a/index.html
+++ b/index.html
@@ -50,7 +50,13 @@
                         Technology Leader | #AWS Community BUilder | Multi-Cloud Certified Professional 
                     </div>
                     <p class="lead mb-5">
-			    Having 15+ years of professional experience in IT with Masters education. I am working as a Principal Consultant / Manager - Cloud Infrastructure. Helping Customers with continuous support and delivery in Enterprise Data upgrade & Cloud Migration Engagements. Helped customers with Cloud Migration Security Advisory Services. <a target ="_blank" href="">
+			Having 15+ years of professional experience in IT with Masters education. 
+			I am working as Cloud Architect / Principal Consultant - Hybrid Cloud, Infra, Security, DevOps, Data, AI & ML. 
+			Helping customers with advisory and delivery services for Cloud Transformation engagements. 
+			Handling multiple projects delivery as part of Platform Engineering Services Enablement team.
+			Helped CISO / CIO & application teams with security advisory services for cloud migration engagements.
+			AWS Community Builder
+<a target ="_blank" href="">
 			    </a> </p>
 					
                     <div class="social-icons">
