--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     </div>
                     <p class="lead mb-5">
 			Having 15+ years of professional experience in IT with Masters education. 
-			I am working as Cloud Architect / Principal Consultant - Hybrid Cloud, Infra, Security, DevOps, Data, AI & ML. 
+			I am working as Cloud Architect / Principal Consultant - Hybrid Cloud, Infra, Security, DevOps, Data, AI & Prompt Engineering. 
 			Helping customers with advisory and delivery services for Cloud Transformation engagements. 
 			Handling multiple projects delivery as part of Platform Engineering Services Enablement team.
 			Helped CISO / CIO & application teams with security advisory services for cloud migration engagements.
@@ -84,7 +84,7 @@
                             
 				<div class="subheading mb-3">TCS</div>
 			    
-                            <p> I am working as Cloud Architect. </p>
+                            <p> I am working as Cloud Architect / Principal Consultant . </p>
 <p>				
 	𝐏𝐫𝐨𝐟𝐞𝐬𝐬𝐢𝐨𝐧𝐚𝐥 𝐂𝐞𝐫𝐭𝐢𝐟𝐢𝐜𝐚𝐭𝐢𝐨𝐧𝐬: </p>
 
