--- a/index.html
+++ b/index.html
@@ -50,12 +50,20 @@
                         Technology Leader | #AWS Community BUilder | Multi-Cloud Certified Professional 
                     </div>
                     <p class="lead mb-5">
-			Having 15+ years of professional experience in IT with Masters education. 
-			I am working as Cloud Architect / Principal Consultant - Hybrid Cloud, Infra, Security, DevOps, Data, AI & Prompt Engineering. 
-			Helping customers with advisory and delivery services for Cloud Transformation engagements. 
-			Handling multiple projects delivery as part of Platform Engineering Services Enablement team.
-			Helped CISO / CIO & application teams with security advisory services for cloud migration engagements.
-			AWS Community Builder
+• Having 15+ years of professional experience in IT with Masters education (MCA).
+
+• Working as **Platform Engineering Lead / Senior Manager** - Cloud, Security, Data, AI, ML, Generative AI & Prompt Engineering. 
+
+• Helping customers with advisory and delivery services for Cloud Migration engagements. Handling multiple projects delivery as part of Platform Engineering team.
+
+• Helped Customers, CISO & application teams with Data & Cloud Migration, Security Advisory for Cloud Transformation Engagements. 
+
+• UK Resident.
+
+• AWS Community Builder
+
+• Having domain experience in Financial Services, Retail, Utilities, Oil and Gas, Telecommunications, Healthcare, Pharma, Industrial, Energy & Utilities.
+
 <a target ="_blank" href="">
 			    </a> </p>
 					
