--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
                     <p class="lead mb-5">
 • Having 15+ years of professional experience in IT with Masters education (MCA).
 
-• Working as **Platform Engineering Lead / Senior Manager** - Cloud, Security, Data, AI, ML, Generative AI & Prompt Engineering. 
+• Working as <b> Platform Engineering Lead </b> / <b> Senior Manager </b> - Cloud, Security, Data, AI, ML, Generative AI & Prompt Engineering. 
 
 • Helping customers with advisory and delivery services for Cloud Migration engagements. Handling multiple projects delivery as part of Platform Engineering team.
 
-• Helped Customers, CISO & application teams with Data & Cloud Migration, Security Advisory for Cloud Transformation Engagements. 
+• Helped CISO & application teams with Data, Cloud Migration & Security Advisory for Cloud Transformation Engagements. 
 
 • UK Resident.
 
