--- a/index.html
+++ b/index.html
@@ -50,17 +50,17 @@
                         Technology Leader | #AWS Community BUilder | Multi-Cloud Certified Professional 
                     </div>
                     <p class="lead mb-5">
-• Having 15+ years of professional experience in IT with Masters education (MCA).
+• Having 15+ years of professional experience in IT with Masters education (MCA). </br>
 
-• Working as <b> Platform Engineering Lead </b> / <b> Senior Manager </b> - Cloud, Security, Data, AI, ML, Generative AI & Prompt Engineering. 
+• Working as <b> Platform Engineering Lead </b> / <b> Senior Manager </b> - Cloud, Security, Data, AI, ML, Generative AI & Prompt Engineering. </br>
 
-• Helping customers with advisory and delivery services for Cloud Migration engagements. Handling multiple projects delivery as part of Platform Engineering team.
+• Helping customers with advisory and delivery services for Cloud Migration engagements. Handling multiple projects delivery as part of Platform Engineering team. </br>
 
-• Helped CISO & application teams with Data, Cloud Migration & Security Advisory for Cloud Transformation Engagements. 
+• Helped CISO & application teams with Data, Cloud Migration & Security Advisory for Cloud Transformation Engagements. </br>
 
-• UK Resident.
+• UK Resident. </br>
 
-• AWS Community Builder
+• AWS Community Builder </br>
 
 • Having domain experience in Financial Services, Retail, Utilities, Oil and Gas, Telecommunications, Healthcare, Pharma, Industrial, Energy & Utilities.
 
