--- a/index.html
+++ b/index.html
@@ -96,9 +96,9 @@
 <p>				
 	𝐏𝐫𝐨𝐟𝐞𝐬𝐬𝐢𝐨𝐧𝐚𝐥 𝐂𝐞𝐫𝐭𝐢𝐟𝐢𝐜𝐚𝐭𝐢𝐨𝐧𝐬: </p>
 
-<p> Microsoft Certified Professional (Azure, M365, Security Fundamentals) </p>
-<p> Certified Jenkins Engineer		</p>
-<p> PagerDuty Certified	</p>
+<p> • Microsoft Certified Professional (Azure, M365, Security Fundamentals) </br>
+    • Certified Jenkins Engineer		</br>
+    • PagerDuty Certified	</br> </p>
 				    
 <p> 	𝐓𝐞𝐜𝐡𝐧𝐢𝐜𝐚𝐥 𝐒𝐤𝐢𝐥𝐥𝐬 </p>
 	
