--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
 <p> 	𝐓𝐞𝐜𝐡𝐧𝐢𝐜𝐚𝐥 𝐒𝐤𝐢𝐥𝐥𝐬 </p>
 	
 			<p> • Cloud (AWS, Google Cloud, Microsoft Azure and Oracle Cloud), Automation & DevOps   </p>
+			    • Data, AI, ML. Generative AI & Prompt Engineering </p>
 			    • Power BI, Tableau </p>
 			    • Citrix – XenApp & XenDesktop, VMWare, HyperV, Windows, Active Directory, SCCM, SCOM </p>
 			    • Terraform. Python, PowerShell </p>
