--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                             
 				<div class="subheading mb-3">TCS</div>
 			    
-                            <p> I am working as <b> Platform Engineering Lead </b> / <b> Senior Manager </b>. </p>
+                            <p> I am working as <b> Enterprise Architect </b> / <b> Platform Engineering Lead </b>. </p>
 <p>				
 	𝐏𝐫𝐨𝐟𝐞𝐬𝐬𝐢𝐨𝐧𝐚𝐥 𝐂𝐞𝐫𝐭𝐢𝐟𝐢𝐜𝐚𝐭𝐢𝐨𝐧𝐬: </p>
 
