--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 			Addepalli
                     </h1>
                   <div class="subheading mb-5">
-                        Technology Leader | #AWS Community BUilder | Multi-Cloud Certified Professional 
+                        Technology Leader | <b> AWS Community BUilder </b> | Tech Community Ambassador
                     </div>
                     <p class="lead mb-5">
 • Having 15+ years of professional experience in IT with Masters education (MCA). </br>
