--- a/index.html
+++ b/index.html
@@ -152,8 +152,18 @@
                 <div class="resume-section-content">
                     <h2 class="mb-5">Skills</h2>
                     
-                    <div class="subheading mb-3">Programming Languages and Tools</div>
-                    <ul class="fa-ul mb-0">
+                    <div class="subheading mb-3">Skill set</div>
+
+			<p> • Cloud (AWS, Google Cloud, Microsoft Azure and Oracle Cloud), Automation & DevOps   </p>
+			    • Data, AI, ML, Generative AI & Prompt Engineering </p>
+			    • Power BI, Tableau </p>
+			    • Citrix – XenApp & XenDesktop, VMWare, HyperV, Windows, Active Directory, SCCM, SCOM </p>
+			    • Terraform. Python, PowerShell </p>
+			    • Atlassian tools (JIRA, Confluence), ServiceNow and Remedy </p>
+			    • Agile Service Delivery, Stakeholder Management, ITSM, Project Management </p>
+		
+			<!-->
+			<ul class="fa-ul mb-0">
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
                             Cloud, VMware, Citrix, HyperV, SQL and DevOps.
@@ -187,7 +197,8 @@
                             <span class="fa-li"><i class="fas fa-check"></i></span>
                             Content Management, Websphere Portal Server, Websphere Application Server
                         </li>
-						<li>
+		-->
+			<li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
                             Domain: Financial Services (Banking), Utilities, Telecommunications, Pharma, Healthcare, Energy and Utilities .
                         </li>
