--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
                         Technology Leader | <b> AWS Community BUilder </b> | Tech Community Ambassador
                     </div>
                     <p class="lead mb-5">
-• Having 15+ years of professional experience in IT with Masters education (MCA). </br>
-• Working as <b> Enterprise Architect </b> / <b> Platform Engineering Lead </b> - Cloud, Security, Data, AI, ML, Generative AI & Prompt Engineering. </br>
-• Helping customers with advisory and delivery services for Cloud Migration engagements. Handling multiple projects delivery as part of Platform Engineering team. </br>
-• Helped CISO & application teams with Data, Cloud Migration & Security Advisory for Cloud Transformation Engagements. </br>
+• Having 16+ years of professional experience in IT with Masters education (MCA). </br>
+• Working as <b> Technical Architect Architect </b> - Cloud, DevOps, Security, Data & Generative AI. </br>
+• Helping customers with Platform Engineering Support, advisory and delivery for Cloud Migration engagements. Handling multiple projects delivery as part of Platform Engineering team. </br>
+• Helped CIO, CISO & application teams with Data, Cloud Migration & Security Advisory as part of Cloud Transformation Engagements. </br>
 
 • UK Resident. </br>
 • AWS Community Builder </br>
