--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
 • AWS Community Builder </br>
 
-• Having domain experience in Financial Services, Retail, Utilities, Oil and Gas, Telecommunications, Healthcare, Pharma, Industrial, Energy & Utilities.
+• Having domain experience in Retail, BFSI (Banking, Financial services and Insurance), Manufacturing, Healthcare, Industrial, Energy & Utilities, Oil & Gas, Telecommunications and other.
 <a target ="_blank" href="">
 			    </a> </p>
 					
