--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     </div>
                     <p class="lead mb-5">
 • Having 16+ years of professional experience in IT with Masters education (MCA). </br>
-• Working as <b> Technical Architect Architect </b> - Cloud, DevOps, Security, Data & Generative AI. </br>
+• Working as <b> Technical Architect </b> - Cloud, DevOps, Security, Data & Generative AI. </br>
 • Helping customers with Platform Engineering Support, advisory and delivery for Cloud Migration engagements. Handling multiple projects delivery as part of Platform Engineering team. </br>
 • Helped CIO, CISO & application teams with Data, Cloud Migration & Security Advisory as part of Cloud Transformation Engagements. </br>
 
@@ -86,7 +86,7 @@
                             
 				<div class="subheading mb-3">TCS</div>
 			    
-                            <p> I am working as <b> Enterprise Architect </b> / <b> Platform Engineering Lead </b>. </p>
+                            <p> I am working as <b> Technical Architect - Cloud & AI </b>. </p>
 <p>				
 	𝐏𝐫𝐨𝐟𝐞𝐬𝐬𝐢𝐨𝐧𝐚𝐥 𝐂𝐞𝐫𝐭𝐢𝐟𝐢𝐜𝐚𝐭𝐢𝐨𝐧𝐬: </p>
 
