--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     </div>
                     <p class="lead mb-5">
 • Having 16+ years of professional experience in IT with Masters education (MCA). </br>
-• Working as <b> Technical Architect </b> - Cloud, DevOps, Security, Data & Generative AI. </br>
+• Working as <b> Technical Transformation Lead </b> - Cloud, DevOps, Security, Data & Generative AI. </br>
 • Helping customers with Platform Engineering Support, advisory and delivery for Cloud Migration engagements. Handling multiple projects delivery as part of Platform Engineering team. </br>
 • Helped CIO, CISO & application teams with Data, Cloud Migration & Security Advisory as part of Cloud Transformation Engagements. </br>
 
@@ -96,11 +96,11 @@
 				    
 <p> 	𝐓𝐞𝐜𝐡𝐧𝐢𝐜𝐚𝐥 𝐒𝐤𝐢𝐥𝐥𝐬 </p>
 	
-			<p> • Cloud (AWS, Google Cloud, Microsoft Azure and Oracle Cloud), Automation & DevOps   </p>
-			    • Data, AI, ML, Generative AI & Prompt Engineering </p>
+			<p> • Cloud (AWS, Google Cloud, Microsoft Azure and Oracle Cloud), DevOps   </p>
+			    • Docker, Kubernetes, Ansible, Terraform. Python, PowerShell </p>
+			    • Generative AI & Prompt Engineering </p>
 			    • Power BI, Tableau </p>
 			    • Citrix – XenApp & XenDesktop, VMWare, HyperV, Windows, Active Directory, SCCM, SCOM </p>
-			    • Terraform. Python, PowerShell </p>
 			    • Atlassian tools (JIRA, Confluence), ServiceNow and Remedy </p>
 			    • Agile Service Delivery, Stakeholder Management, ITSM, Project Management </p>
                         </div>
