--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 			Addepalli
                     </h1>
                   <div class="subheading mb-5">
-                        Technology Leader | <b> AWS Community BUilder </b>
+                        Technology Leader <b> </b>
                     </div>
                     <p class="lead mb-5">
 • Having 16+ years of professional experience in IT with Masters education (MCA). </br>
