--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     </div>
                     <p class="lead mb-5">
 • Having 16+ years of professional experience in IT with Masters education (MCA). </br>
-• Working as <b> Technical Transformation Lead </b> - Cloud, DevOps, Security, Data & Generative AI. </br>
+• Working as <b> Technical Transformation Lead </b> - Cloud, DevOps, Cybersecurity, BI & Generative AI. </br>
 • Helping customers with Platform Engineering Support, advisory and delivery for Cloud Migration engagements. Handling multiple projects delivery as part of Platform Engineering team. </br>
 • Helped CIO, CISO & application teams with Data, Cloud Migration & Security Advisory as part of Cloud Transformation Engagements. </br>
 
