--- a/index.html
+++ b/index.html
@@ -53,10 +53,7 @@
 • Working as <b> Technical Transformation Lead </b> - Cloud, DevOps, Cybersecurity, BI & Generative AI. </br>
 • Helping customers with Platform Engineering Support, advisory and delivery for Cloud Migration engagements. Handling multiple projects delivery as part of Platform Engineering team. </br>
 • Helped CIO, CISO & application teams with Data, Cloud Migration & Security Advisory as part of Cloud Transformation Engagements. </br>
-
-• AWS Community Builder </br>
-
-• Having domain experience in Retail, BFSI (Banking, Financial services and Insurance), Manufacturing, Healthcare, Industrial, Energy & Utilities, Oil & Gas, Telecommunications and other.
+• Having domain experience in  Telecommunications, Retail, BFSI (Banking, Financial services and Insurance), Healthcare, Manufacturing, Industrial, Energy & Utilities, Oil & Gas and other.
 <a target ="_blank" href="">
 			    </a> </p>
 					
