--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     • PagerDuty Certified	</br> </p>
 				    
 
-<div class="subheading mb-3">TCS, UK </div>
+<div class="subheading mb-3">TCS, UK
 <div class="flex-shrink-0"><span class="text-primary"> March 2019 - March 2024 </span></div>
 	
 </div>
@@ -107,7 +107,7 @@
 			    • Docker, Kubernetes, Ansible, Terraform. Python, PowerShell </p>
 			    • Generative AI & Prompt Engineering </p>
 			    • Power BI, Tableau </p>
-			    • Citrix – XenApp & XenDesktop, VMWare, HyperV, Windows, Active Directory, SCCM, SCOM </p>
+			    • Citrix XenApp & XenDesktop, VMWare, HyperV, Windows, Active Directory, SCCM, SCOM </p>
 			    • Atlassian tools (JIRA, Confluence), ServiceNow and Remedy </p>
 			    • Agile Service Delivery, Stakeholder Management, ITSM, Project Management </p>
 				   
